@@ -210,7 +210,7 @@ cleanup:
 	return is_issuer;
 }
 
-static const pkcs11h_engine_crypto_t _g_pkcs11h_crypto_engine_polarssl = {
+const pkcs11h_engine_crypto_t _g_pkcs11h_crypto_engine_polarssl = {
 	NULL,
 	__pkcs11h_crypto_polarssl_initialize,
 	__pkcs11h_crypto_polarssl_uninitialize,
